--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,8 @@
     margin: 0%;
 }
 body{
-    background-color: cornsilk;
+    background-image: url(/img/fondo5.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
