--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body.pagina1 {
   
   /* Para la página 2 */
   body.pagina2 {
-    background-image: url(https://cdn.aarp.net/content/dam/aarp/home-and-family/personal-technology/2022/03/1140-phone-screen-and-leaves-esp.jpg);
+    background-image: url(https://i.pinimg.com/736x/65/6f/d9/656fd9934ad003a2c03c94e992d4d004.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: fantasy;
