añado pagina reservas.html y empiezo formulario

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,12 @@ body.pagina1 {
     font-family: fantasy;
     height: 100vh;
   }
+
+
+  body.pagina4{
+    background-image: url(/img/fondo5.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: fantasy;
+    height: 100vh;
+  }
