elimino slide, añado imagen, cambio fondo, añado navbar inferior y texto compromiso medioambiental

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,9 +36,8 @@ body.pagina1 {
   }
 
   body.pagina5{
-    background-image: url(https://jamonpasion.com/img/cms/montanera,%20cerdos%20ib%C3%A9ricos,%20bellota,%20encinas,%20comprar%20jamon%20de%20guijuelo%20barato.jpg);
+    background-image: url(https://agicg.es/wp-content/uploads/environmental-protection-gcf9ecf401_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: fantasy;
-    height: 100vh;
   }
