añado pagina quienessomos.html, vinculo logotipo

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,10 @@ body.pagina1 {
     background-size: cover;
     font-family: fantasy;
   }
+
+  body.pagina6{
+    background-image: url(/img/fondo5.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: fantasy;
+  }
