--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    
 }
 
 body.pagina1 {
-    background-image: url(https://media.istockphoto.com/id/946000252/es/foto/tomate-cherry-y-hojas-de-albahaca-en-pizarra-piedra-pizarra-negra-con-copyspace-ingredientes-de.jpg?s=612x612&w=0&k=20&c=Tc2xuPihSRWL-jxrtVaKfNDEQU029jrB0NyxvhbPiHM=);
+    background-image: url(../img/restaurante.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: fantasy;
