--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,92 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    
+* {
+  padding: 0;
+  margin: 0;
 }
 
 body.pagina1 {
-    background-image: url(../img/restaurante.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: fantasy;
-  }
-  
-  body.pagina2 {
-    background-image: url(https://i.pinimg.com/originals/70/e1/61/70e16105054d9c673b1e547077cb14b8.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: fantasy;
-  }
+  background-image: url(../img/restaurante.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: fantasy;
+}
 
-  body.pagina3 {
-    background-image: url(https://media.istockphoto.com/id/946000252/es/foto/tomate-cherry-y-hojas-de-albahaca-en-pizarra-piedra-pizarra-negra-con-copyspace-ingredientes-de.jpg?s=612x612&w=0&k=20&c=Tc2xuPihSRWL-jxrtVaKfNDEQU029jrB0NyxvhbPiHM=);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: fantasy;
-    height: 100vh;
-  }
+.logo-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 
+.logo-image {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+}
 
-  body.pagina4{
-    background-image: url(https://media.istockphoto.com/id/946000252/es/foto/tomate-cherry-y-hojas-de-albahaca-en-pizarra-piedra-pizarra-negra-con-copyspace-ingredientes-de.jpg?s=612x612&w=0&k=20&c=Tc2xuPihSRWL-jxrtVaKfNDEQU029jrB0NyxvhbPiHM=);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: fantasy;
-  }
+.logo-text {
+  margin-top: 10px;
+  font-size: 35px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: white;
+  opacity: 0;
+}
 
-  body.pagina5{
-    background-image: url(https://agicg.es/wp-content/uploads/environmental-protection-gcf9ecf401_1920.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: fantasy;
-  }
+body.pagina2 {
+  background-image: url(../img/restaurante.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: fantasy;
+}
 
-  body.pagina6{
-    background-image: url(https://media.istockphoto.com/id/946000252/es/foto/tomate-cherry-y-hojas-de-albahaca-en-pizarra-piedra-pizarra-negra-con-copyspace-ingredientes-de.jpg?s=612x612&w=0&k=20&c=Tc2xuPihSRWL-jxrtVaKfNDEQU029jrB0NyxvhbPiHM=);
-    background-repeat: no-repeat;
-    background-size: cover;
-    
+body.pagina3 {
+  background-image: url(../img/restaurante.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: fantasy;
+  height: 100vh;
+}
+
+body.pagina4 {
+  background-image: url(../img/restaurante.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: fantasy;
+}
+
+body.pagina5 {
+  background-image: url(../img/restaurante.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: fantasy;
+}
+
+.img-size {
+  width: 300px;
+  height: 300px;
+}
+
+.textoCompromiso {
+  background-color: rgba(0, 0, 0, 0.274);
+  border-radius: 0.7em 0.7em 0.7em 0.7em;
+  color: rgb(255, 255, 230);
+}
+
+body.pagina6 {
+  background-image: url(../img/restaurante.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeInAnimation 3s ease-in-out forwards;
+}
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
   }
-  
+  100% {
+    opacity: 1;
+  }
+}
