Actualizo vista contacto, añado navbar y footer, actualizo formulario y adapto tamaños, centro boton de enviar

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,10 @@ body.pagina3 {
   height: 100vh;
 }
 
+.formSugerencias {
+  margin-top: 10em;
+}
+
 body.pagina4 {
   background-image: url(../img/restaurante.jpg);
   background-repeat: no-repeat;
