--- a/css/styles.css
+++ b/css/styles.css
@@ -86,11 +86,123 @@ body.pagina6 {
   opacity: 0;
   animation: fadeInAnimation 3s ease-in-out forwards;
 }
+
+.custom-tile {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
+}
+.custom-tile img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+.imgCompromiso, .img-fluid {
+  height: 60%;
+  width: 80%;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
+}
+
+.textSomos {
+  background-color: rgba(255, 255, 255, 0.367);
+}
 @keyframes fadeInAnimation {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.formulario {
+  background-color: #33333352;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgb(255, 255, 255);
+  width: 100%;
+  max-width: 500px;
+  color: #ebffdd;
+}
+
+.form-title {
+  color: #ebffdd;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-label {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.form-input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #f7b731;
+  border-radius: 5px;
+  color: black;
+  font-size: 16px;
+}
+
+.btn-submit {
+  background-color: #f5e3a8;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #2b2828;
+  font-size: 16px;
+  cursor: pointer;
+  margin-left: 140px;
+  transition: background-color 0.3s ease;
+}
+
+.mensaje-exito {
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #77ff00;
+  font-size: 20px;
+  margin-left: 80px;
+}
+
+.btn-submit:hover {
+  background-color: #d6c691;
+}
+
+@media (max-width: 576px) {
+  .logo-image {
+    width: 200px;
+    height: 200px;
+  }
+
+  .logo-container {
+    margin-top: 10%;
+  }
+
+  .footer-content {
+    text-align: center;
+  }
+  .body-bg {
+    background-size: cover;
+    height: 100vh;
+  }
+  .footer {
+    display: none;
   }
 }
