--- a/css/styles.css
+++ b/css/styles.css
@@ -310,6 +310,51 @@ body.pagina6 {
   margin-left: 0.5em;
 }
 
+.modal-dialog {
+  max-width: 800px;
+}
+
+.modal-content {
+  background-color: #33333352;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgb(255, 255, 255);
+}
+
+.modal-header {
+  background-color: #343a40;
+  border-radius: 10px 10px 0 0;
+  padding: 20px;
+  color: #fff;
+}
+
+.modal-title {
+  font-size: 24px;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.modal-footer {
+  border-top: none;
+  background-color: #33333352;
+  border-radius: 0 0 10px 10px;
+  justify-content: center;
+}
+
+.modal-total-text {
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.total-carrito-modal {
+  font-size: 24px;
+  font-weight: bold;
+  color: #29e426;
+}
+
 @media (max-width: 576px) {
   .logo-image {
     width: 200px;
