--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,7 @@ body.pagina6 {
 
 .modal-title {
   font-size: 24px;
+  color: #ebffdd;
 }
 
 .modal-body {
@@ -346,13 +347,111 @@ body.pagina6 {
 .modal-total-text {
   font-size: 18px;
   font-weight: bold;
-  color: white;
+  color: #ebffdd;
 }
 
 .total-carrito-modal {
   font-size: 24px;
   font-weight: bold;
   color: #29e426;
+}
+
+@keyframes flash-green {
+  0%,
+  100% {
+    background-color: transparent;
+  }
+  50% {
+    background-color: rgb(68, 255, 0);
+  }
+}
+
+.flash-green {
+  animation: flash-green 0.5s ease infinite;
+  border-radius: 50%;
+}
+
+@keyframes flash-red {
+  0%,
+  100% {
+    background-color: transparent;
+  }
+  50% {
+    background-color: rgb(255, 102, 0);
+  }
+}
+
+.flash-red {
+  animation: flash-red 0.5s ease infinite;
+  border-radius: 10%;
+}
+
+.neon-button {
+  font-size: 20px;
+  padding: 12px 30px;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  z-index: 1;
+  transition: color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.neon-button:before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  background: linear-gradient(45deg, #ffffff, #000000, #989992);
+  background-size: 200% 200%;
+  animation: neon-border-animation 3s linear infinite,
+    neon-pulse 1.5s ease alternate infinite;
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.neon-button:hover {
+  color: #ffffff;
+  box-shadow: 0 0 20px rgb(255, 255, 255);
+}
+
+.neon-button:hover:before {
+  opacity: 1;
+}
+
+@keyframes neon-border-animation {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+    background-position: 0 0;
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+    background-position: 200% 200%;
+  }
+}
+
+@keyframes neon-pulse {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+}
+
+.exito-message {
+  color: #00ff08;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 10px;
+  text-align: center;
+  display: none;
 }
 
 @media (max-width: 576px) {
