--- a/css/styles.css
+++ b/css/styles.css
@@ -472,7 +472,7 @@ body.pagina6 {
 #parpadeoImg {
   width: 300px;
   height: 300px;
-  animation: parpadeo 3s infinite alternate, cambioTexto 3s infinite alternate;
+  animation: parpadeo 2.9s infinite alternate, cambioTexto 3s infinite alternate;
   border-radius: 50%;
 }
 
@@ -489,13 +489,15 @@ body.pagina6 {
 .text-mask {
   border-radius: 50%;
   padding: 20px;
-  animation: cambioTexto 3s infinite alternate;
+  animation: cambioTexto 2.9s infinite alternate;
   opacity: 0;
   margin: 20px auto;
-  font-family: century 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: century "Franklin Gothic Medium", "Arial Narrow", Arial,
+    sans-serif;
   font-size: 1.5em;
-  color: white;
+  color: rgb(223, 0, 164);
   font-weight: bold;
+  text-shadow: 0 0 10px rgb(255, 255, 255);
 }
 
 @keyframes cambioTexto {
