Implemento carrito en carta de cocteles e implemento iconos para añadir y restar de la cesta

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ body.pagina6 {
 .dish-price {
   flex: 1;
   text-align: right;
-  color: #f39c12;
+  color: #ff9100;
   font-weight: bold;
 }
 
@@ -296,7 +296,7 @@ body.pagina6 {
 }
 
 .carrito-count {
-  color: rgb(255, 174, 0);
+  color: rgb(255, 0, 234);
   font-weight: bold;
 }
 
@@ -308,12 +308,17 @@ body.pagina6 {
   width: 1.6em;
   cursor: pointer;
   margin-left: 1em;
+  box-shadow: 0 0 10px rgb(255, 255, 255);
+  border-radius: 5px;
 }
 
 .eliminarBoton {
   width: 1.5em;
   cursor: pointer;
   margin-left: 0.5em;
+  box-shadow: 0 0 10px rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.705);
+  border-radius: 5px;
 }
 
 .modal-dialog {
@@ -392,66 +397,46 @@ body.pagina6 {
   border-radius: 10%;
 }
 
-.neon-button {
-  font-size: 20px;
-  padding: 12px 30px;
-  background-color: transparent;
-  border: none;
-  color: #fff;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  z-index: 1;
-  transition: color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.neon-button:before {
-  content: "";
-  position: absolute;
-  top: -2px;
-  left: -2px;
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
-  background: linear-gradient(45deg, #ffffff, #000000, #989992);
-  background-size: 200% 200%;
-  animation: neon-border-animation 3s linear infinite,
-    neon-pulse 1.5s ease alternate infinite;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.neon-button:hover {
-  color: #ffffff;
-  box-shadow: 0 0 20px rgb(255, 255, 255);
-}
-
-.neon-button:hover:before {
-  opacity: 1;
-}
-
 .botonMolesto {
   display: none;
 }
 
-@keyframes neon-border-animation {
-  0% {
-    transform: translate(-50%, -50%) rotate(0deg);
-    background-position: 0 0;
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(360deg);
-    background-position: 200% 200%;
-  }
+.neon-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -50px;
 }
 
-@keyframes neon-pulse {
-  0%,
-  100% {
-    transform: scale(1);
+.neon-button {
+  background-color: #000000;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  animation: neon 1.5s linear infinite alternate;
+  font-family: century "Franklin Gothic Medium", "Arial Narrow", Arial,
+    sans-serif;
+  margin-top: -50px;
+}
+
+.neon-button:hover {
+  background-color: black;
+  color: rgb(255, 86, 210);
+}
+
+@keyframes neon {
+  0% {
+    box-shadow: 0 0 1.5px rgb(223, 0, 164), 0 0 3px rgb(223, 0, 164),
+      0 0 6px rgb(255, 255, 255), 0 0 12px rgb(223, 0, 164);
   }
-  50% {
-    transform: scale(1.05);
+  100% {
+    box-shadow: 0 0 1.5px rgb(34, 0, 255), 0 0 3px rgb(34, 0, 255),
+      0 0 6px rgb(255, 255, 255), 0 0 12px rgb(34, 0, 255);
   }
 }
 
@@ -592,6 +577,7 @@ body.pagina6 {
 .tituloCocteles {
   color: rgb(255, 0, 230);
   text-shadow: 0 0 15px white;
+  margin-top: -2em;
 }
 .coctel {
   text-shadow: 0 0 0px rgb(255, 255, 255);
